--- a/IA for VR/Packages/manifest.json
+++ b/IA for VR/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.purchasing": "2.1.1",
     "com.unity.render-pipelines.lightweight": "7.3.1",
+    "com.unity.render-pipelines.universal": "7.5.2",
     "com.unity.test-framework": "1.1.19",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
