--- a/IA for VR/Packages/manifest.json
+++ b/IA for VR/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ext.nunit": "1.0.5",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.ml-agents": "1.0.6",
     "com.unity.purchasing": "2.1.1",
     "com.unity.render-pipelines.lightweight": "7.3.1",
     "com.unity.render-pipelines.universal": "7.5.2",
